--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "composer\/installers": "1.x",
     "mnsami\/composer-custom-directory-installer": "1.1.*",
     "wpbp\/widgets-helper": "1.0.3",
+    "wpbp\/cronplus": "1.0.3",
     "webdevstudios\/cmb2": "2.2.5.3",
     "yoast\/i18n-module": "3.0.0",
     "yoast\/whip": "1.1.0"
