--- a/grumphp.yml
+++ b/grumphp.yml
@@ -7,23 +7,13 @@ parameters:
             with_dependencies: false
             strict: false
         phpcs:
-            standard: PHPDoc
-            ignore_patterns: ['/lib/']
+            standard: PHPCompatibility
+            ignore_patterns: ['/lib/','/tests/']
         grunt: ~
         phpmd: ~
-        codeception:
-            config_file: ~
-            fail_fast: false
-            suite: ~
-            test: ~
         git_blacklist:
             keywords:
                 - 'die('
                 - 'print_r('
                 - 'var_dump('
             triggered_by: [php]
-    testsuites:
-        git_pre_push:
-            tasks: 
-                - codeception
-
