--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *~
 *.sass-cache
 *.lock
+*-lock.json
 
 # OS or Editor folders
 .DS_Store
@@ -25,6 +26,7 @@ nbproject
 *.sublime-workspace
 node_modules
 composer
+codeception.yml
 
 # Folders to ignore
 .hg
