--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,8 @@ install:
   # export a dump of the just installed database to the _data folder
   - wp db export $TRAVIS_BUILD_DIR/tests/_data/dump.sql
   - cd /home/travis/build/
-  - ln -s ./wp-promote-mdn $WP_FOLDER/wp-content/plugins/wp-promote-mdn
+  - ln -s /home/travis/build/mdn/wp-promote-mdn $WP_FOLDER/wp-content/plugins/wp-promote-mdn
+  - cd /home/travis/build/mdn/wp-promote-mdn
 
 script:
   - codecept run wpunit
