--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 language: php
 php:
-  - 7.0
+  - 7.1
   - 5.6
 notifications:
 irc: "irc.mozilla.org#mdndev"
@@ -70,4 +70,5 @@ install:
   - cd /home/travis/build/mdn/wp-promote-mdn
 
 script:
+  - if [[ ${TRAVIS_PHP_VERSION:0:3} == "7.1" ]]; then composer require lucatume/wp-browser:2.0.*
   - codecept run wpunit
